tests/regression/errors/basic/undefined_var_3.csd
// Undefined variable test 3
vibez.spill("Using undefined:", undefined_var_3)
sus result drip = missing_variable + 3
